force-app/main/default/objects/fferpcore__FeatureEnablementLog__c/fferpcore__FeatureEnablementLog__c.object-meta.xml
<CustomObject>
    <label>Feature Enablement Log</label>
    <nameField>
        <label>Feature Activation Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Enablement Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>