force-app/main/default/objects/fferpcore__FeatureEnablementLog__c/fields/fferpcore__ActivationNumber__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ActivationNumber__c</fullName>
    <description>Groups log records for a particular activation</description>
    <label>Activation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>