force-app/main/default/objects/fferpcore__FeatureEnablementLog__c/fields/fferpcore__FeatureName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__FeatureName__c</fullName>
    <description>The fully qualified API name of the related Feature.</description>
    <label>Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>