force-app/main/default/objects/fferpcore__FeatureEnablementLog__c/fields/fferpcore__IsEnablement__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsEnablement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Feature was being enabled or disabled.</description>
    <label>Enable</label>
    <type>Checkbox</type>
</CustomField>